--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@mdx-js/react": "^2.1.1",
-    "next": "12.1.5",
+    "next": "^13.5.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "sass": "^1.50.0"
